# comic-fake-view

./: .gitignore  Cargo.toml  chapters.txt  data.db  schema.sql
.github/workflows/: automation.yml  cli.yml  fetch-chapter.yml  release.yml
chapter-fetcher/: Cargo.toml  data.db
chapter-fetcher/src/: main.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs
comic-fake-view/: Cargo.toml  package.json  tsconfig.json  vite.config.ts
comic-fake-view/src/: App.tsx  main.rs  main.tsx
comic-fake-view/src-tauri/: Cargo.toml  tauri.conf.json
comic-fake-view/src-tauri/src/: browser.rs  config.rs  lib.rs  main.rs
comic-fake-view/src-tauri/src/command/: get_config.rs  mod.rs  run.rs  set_config.rs
comic-fake-view/src-tauri/src/database/: job.rs  mod.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs
core/src/database/: job.rs
crates/automation/: Cargo.toml
crates/automation/src/: config.rs  lib.rs
crates/browser/: Cargo.toml
crates/browser/src/: config.rs  lib.rs
crates/database/: Cargo.toml
crates/database/src/: job.rs  lib.rs
desktop-app/: package.json
desktop-app/src/: App.tsx  index.css
desktop-app/src-tauri/: Cargo.toml  data.db  tauri.conf.json
desktop-app/src-tauri/src/: config.rs  lib.rs
desktop-app/src-tauri/src/command/: get_config.rs  run.rs  set_config.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  config.toml  data.db  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/command/: run.rs  set_config.rs  stop.rs
src-tauri/src/database/: job.rs
~/.chromium/: DevToolsActivePort  Local State  SingletonCookie  SingletonLock  SingletonSocket
~/.chromium/Default/: BrowsingTopicsState  Cookies  DIPS  DIPS-shm  DIPS-wal  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  TransportSecurity  Visited Links  Web Data
~/.chromium/Default/Cache/Cache_Data/: 000024cad343319d_0  0004ac11a74a84e3_0  0005a074e40cbeae_0  00081c205056f08f_0  000af48a5db8d1c1_0  000f55af4fe84f14_0  000f689f1d017394_0  0010b77b16f663bf_0  00176997f2e46055_0  00192f5a0dc1616c_0  0019314bf71e49f2_0  001d8b3748ea886a_0  001e415a301132f5_0  002020cce1b23786_0  0020a758495e1e30_0  00220905bf4b1b47_0  0024a601534e201d_0  002569f048ce33ec_0  002729f81358b87e_0  0027b8853df32965_0  00297f8c35794d6f_0  0029d8aab3e9aec4_0  002ace77363a1a3e_0  002ebc684488b300_0  002f09f634263cf9_0  00316addb4e02320_0  00316cea0121fe6f_0  003261d65e42b22a_0  00342a74bb668f42_0  003570f9ecf4bdb7_0  00366af5971630fc_0  003932340f7553ef_0  003d7313e9ad5a63_0  003df28d563f4155_0  00411207f6afe42c_0  00462499248e03b0_0  004737b3aaa64777_0  00494cd0dedb12c7_0  004c178983150e4c_0  004e22391d284357_0  (+37592 more)
~/.chromium/Default/Cache/Cache_Data/index-dir/: the-real-index
~/.chromium/Default/Code Cache/js/: 000df6f26cbb604c_0  0055b1e6398e9bc7_0  006d5500f7ff232f_0  007c4523446edba3_0  0098d259d1d35aa5_0  00c75d89b734384c_0  00d93c104f180d9c_0  00dd6f69e2af4083_0  00e8c5ca3f920883_0  00fe03cfc108ae84_0  0115271f4b15e984_0  011bd9c14b9540ec_0  013e5e0fd0b0a0ae_0  0157f302d6225a00_0  019da474672bdf26_0  01ba6a5eb188dd5f_0  01cd74525095bd1b_0  01e3e2281150c2c4_0  023e4c748f7e49ab_0  0240cd44b99efdc9_0  024f54464317d19c_0  02502f0f11dd2b8b_0  025ea32773ff35eb_0  026b26c5b5a9b486_0  02777977d350ccc6_0  0281e5d24d237229_0  0286fadcad11e274_0  028fd44e4b97742f_0  02bac84cd8f990c7_0  02e4ac125aff9f8e_0  02ece5e369db0af9_0  02ff3fa13cc0b49e_0  03241b0458a09fe2_0  034fe4ceaaaa20c9_0  035277dfa3be568a_0  037d7ac9d0bbf2c1_0  03adc0cc08a3a9b6_0  03d9d69d8a651d01_0  03ed724b13496074_0  03f5f6cd6dda4705_0  (+1847 more)
~/.chromium/Default/Code Cache/js/index-dir/: the-real-index
~/.chromium/Default/Code Cache/wasm/index-dir/: the-real-index
~/.chromium/Default/DawnGraphiteCache/: data_1  index
~/.chromium/Default/DawnWebGPUCache/: data_1  index
~/.chromium/Default/Extension Rules/: LOG
~/.chromium/Default/Extension Scripts/: LOG
~/.chromium/Default/Extension State/: LOG
~/.chromium/Default/GPUCache/: data_1  index
~/.chromium/Default/Local Storage/leveldb/: LOG
~/.chromium/Default/Service Worker/Database/: LOG
~/.chromium/Default/Service Worker/ScriptCache/: 2cc80dabc69f58b6_0
~/.chromium/Default/Service Worker/ScriptCache/index-dir/: the-real-index
~/.chromium/Default/Session Storage/: 000005.ldb  000169.ldb  000171.ldb  000173.ldb  LOG  MANIFEST-000001
~/.chromium/Default/Sessions/: Session_13388400753440058  Session_13388400765151311  Tabs_13388399634243856
~/.chromium/Default/Shared Dictionary/cache/index-dir/: the-real-index
~/.chromium/Default/Site Characteristics Database/: LOG
~/.chromium/Default/Sync Data/LevelDB/: LOG
~/.chromium/Default/WebStorage/: QuotaManager
~/.chromium/Default/shared_proto_db/: LOG
~/.chromium/Default/shared_proto_db/metadata/: LOG
~/.chromium/GrShaderCache/: data_1  index
~/.chromium/GraphiteDawnCache/: data_1  index
~/.chromium/ShaderCache/: data_1  index
~/.chromium/WidevineCdm/: latest-component-updated-widevine-cdm
~/.chromium/component_crx_cache/: jflhchccmppkfebkiaminageehmchikm_1.ecd8930dfea1ab64c5f9f0ea02aa65a42d7b56698287a3784501dcf6dfeb81a4
~/.chromium/segmentation_platform/: ukm_db
