[workspace]
resolver = "2"
members = [ "chapter-fetcher","comic-fake-view"]

[workspace.dependencies]
backon = "1.3.0"
chromiumoxide = { version = "0.7.0", default-features = false, features = ["tokio-runtime"] }
color-eyre = "0.6.3"
futures = "0.3.31"
notify-rust = "4.11.4"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
