[workspace]
resolver = "2"
members = ["desktop-app/src-tauri", "chapter-fetcher", "core", "cli", "crates/database"]

[workspace.dependencies]
anyhow = "1.0.97"
backon = "1.4.1"
chromiumoxide = { version = "0.7.0", default-features = false }
color-eyre = "0.6.3"
config = "0.15.8"
const_format = "0.2.34"
flume = "0.11.1"
futures = "0.3.31"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
serde_with = "3.12.0"
sqlx = "0.8.3"
tauri = "2"
tauri-build = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = "1.43.0"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
comic-fake-view-core = { version = "0.1.0", path = "core" }
