[package]
name = "chapter-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
