[package]
name = "chapter-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tracing-subscriber = { workspace = true, features = ["fmt", "chrono", "env-filter"] }
tracing = { workspace = true }
backon = { workspace = true }
