[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
comic-fake-view-core = { version = "0.1.0", path = "../core" }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "chrono", "env-filter", "json"] }
