[package]
name = "comic-fake-view"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comic_fake_view_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri-plugin-dialog = { workspace = true }
config = { workspace = true }
chromiumoxide = { workspace = true, features = ["tokio-runtime"] }
color-eyre = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
backon = { workspace = true }
tokio = { workspace = true }
flume = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
toml = { workspace = true }
serde_with = { workspace = true, features = ["json"] }
tracing-subscriber = { workspace = true, features = ["fmt", "chrono", "env-filter", "json"] }
tracing = { workspace = true }
const_format = { workspace = true }
comic-fake-view-core = { version = "0.1.0", path = "../core" }

