[package]
name = "comic-fake-view"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comic_fake_view_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
config = "0.15.8"
chromiumoxide = { version = "0.7.0", default-features = false, features = ["tokio-runtime"] }
color-eyre = "0.6.3"
futures = "0.3.31"
reqwest = "0.12.12"
anyhow = "1.0.97"
backon = "1.4.0"
tokio = "1.43.0"
flume = "0.11.1"

