[package]
name = "automation"
version = "0.1.0"
edition = "2024"

[dependencies]
browser = { workspace = true }
color-eyre.workspace = true
database = { workspace = true }
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
