[package]
name = "browser"
version = "0.1.0"
edition = "2024"

[dependencies]
backon.workspace = true
chromiumoxide = { workspace = true, features = ["tokio-runtime"] }
color-eyre.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
