[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre.workspace = true
const_format.workspace = true
flume.workspace = true
reqwest.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true, features = ["full"] }
