[package]
name = "comic-fake-view"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comic_fake_view_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "chrono", "env-filter", "json"] }
tracing = { workspace = true }
automation = { workspace = true }
color-eyre.workspace = true
serde = { workspace = true, features = ["derive"] }
browser.workspace = true
toml.workspace = true
futures.workspace = true

